{
    "version": 1,
    "name": "MainInputMap",
    "maps": [
        {
            "name": "MainInput",
            "id": "335fc25a-de6c-4e91-a9bc-c302eb57db31",
            "actions": [
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "9447dfd9-c755-430b-8585-d6a771e8dc33",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrikePosition",
                    "type": "PassThrough",
                    "id": "05f68337-e817-4df3-a643-4c9c14508ee7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenInteract",
                    "type": "Button",
                    "id": "cb0e04f8-c094-43a5-98de-95f309dedefc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScreenRotation",
                    "type": "Value",
                    "id": "99458c0d-e2fa-449a-b4c9-597109226ae5",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "911a5211-830e-4966-8d65-485e84e14b6c",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "80945a28-405e-4acb-822f-33ded3c94a7a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6f610b64-c362-4286-b639-463bcb80c606",
                    "path": "<Gamepad>/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepade",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b9cbb4e-d7c7-4b7c-9628-967bf5ae2b6e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Sensor",
                    "action": "StrikePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d8b7c5a-8d0b-4aef-bf5b-0f17892aa1f4",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrikePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "340262e3-cacf-409e-b99e-8b0b1401fd32",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ScreenInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc569197-e1a7-4b4b-afed-ba7a2f532306",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Sensor",
                    "action": "ScreenInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe238753-81bf-49c6-b0d7-710a6e30cc25",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "ScreenRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00d370d0-fe45-4774-8515-2d531aca1aff",
                    "path": "<Gyroscope>/angularVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Sensor",
                    "action": "ScreenRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a47c92fd-6d46-4758-89cf-aab1e1a756de",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepade",
            "bindingGroup": "Gamepade",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Sensor",
            "bindingGroup": "Sensor",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gyroscope>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Accelerometer>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}